# openoutreach-cli

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/openoutreach/: __init__.py  cli.py  client.py  config.py  log_stream.py  prompts.py  vpn_locations.py  wizard.py
tests/: test_cli.py
